--- a/recruitment.html
+++ b/recruitment.html
@@ -104,6 +104,7 @@ layout: default
 				<div>
 					<div class="flex_center" style="margin: 0 0.5rem">
 						<h1 class="section_subHeader" style="margin-top: 1rem;">Schedule</h1>
+						<h3>You must attend at least one land tryout, the bonfire social, and both water tryouts.</h3>
 						<table class="recruit_table">
 							<tr>
 								<th>Date</th>
@@ -154,16 +155,16 @@ layout: default
 								<td>La Jolla Shores (meet at Town Square <strong>@5:30pm</strong> for provided rides)</td>
 							</tr>
 							<tr>
-								<td>Wednesday, 10/2</td>
+								<td>Saturday, 10/1</td>
 								<td>Water Practice Tryouts #1</td>
 								<td>9:00am-11:00am</td>
-								<td>Mission Bay (meet at Town Square @8:30am for provided rides)</td>
+								<td>Mission Bay (meet at Town Square <strong>@8:30am</strong> for provided rides)</td>
 							</tr>
 							<tr>
-								<td>Thursday, 10/3</td>
+								<td>Sunday, 10/2</td>
 								<td>Water Practice Tryouts #2</td>
 								<td>9:00am-11:00am</td>
-								<td>Mission Bay (meet at Town Square @8:30am for provided rides)</td>
+								<td>Mission Bay (meet at Town Square <strong>@8:30am</strong> for provided rides)</td>
 							</tr>
 
 							<tr>
@@ -191,6 +192,10 @@ layout: default
 						<p class="section_subHeader">Warren Field</p>
 						<img src="img/WarrenField.jpg">
 					</div>
+					<div class="location_pic">
+						<p class="section_subHeader">Natatorium</p>
+						<img src="img/Natatorium.jpg">
+					</div>
 					<!-- <div class="location_pic">
 						<p class="section_subHeader">Warren Mall</p>
 						<img src="img/WarrenMall.PNG">
@@ -199,10 +204,6 @@ layout: default
 						<p class="section_subHeader">Peterson Loop</p>
 						<img src="img/PetersonLoop.jpg">
 					</div> -->
-					<div class="location_pic">
-						<p class="section_subHeader">Natatorium</p>
-						<img src="img/Natatorium.jpg">
-					</div>
 				</div>
 
 				<div class="horz_block flex_center recruitment2">
