Attempt to remove _site from github

--- a/recruitment.html
+++ b/recruitment.html
@@ -36,6 +36,7 @@ layout: default
 				questions or concerns.</p>
 		</div>
 
+
 		<h3 class="recruitment_video_header">Check Out Our 2022 Recruitment Video!</h3>
 		<div class="recruitment_video">
 			<!--<iframe id="recruitment_player" width="640" height="360" src="https://www.youtube.com/embed/tibtCOR_lX0?enablejsapi=1&origin=http://ucsddragonboat.org/" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
@@ -87,7 +88,11 @@ layout: default
 				changeBorderColor(event.data);
 			}
 		</script>
+
+		<h3>For detailed information on what to bring to recruitment, <a href="https://docs.google.com/document/d/1gaLdBFQQ6m6I6Swq0iRZ49eJs3AR2bj1ujBd80-yGKU/edit?usp=sharing">view this document</a></h3>
+
 	</div>
+
 
 	<div class="horz_block flex_center blue_block" style="margin-bottom: 0">
 		<a id="recruitment_dropdown" class="flex_center" style="width: 100%; color: white; text-decoration: none"
