--- a/alumni.html
+++ b/alumni.html
@@ -13,210 +13,19 @@ layout: default
 			<p class="section_text flex_center description_text"> DEDICATED TO OUR ALUMNI WHO HAVE EMBODIED THE VALUES
 				OF A UC SAN DIEGO DRAGON BOAT PADDLER
 			</p>
-
-			<h2>2021-2022</h2>
-			<ul class="alumni-list">
+			<!-- <h2>2021-2022</h2>
+			 <ul class="alumni-list">
 				{% for alumni in site.data.alumni %}
 				<li>{{ alumni.name }} | {{ alumni.year-joined }}</li>
-				{% endfor %}
+				{% endfor %} -->
 			</ul>
 			<br/>
 
 
 			<ul class="alumni-list">
-				<li>Adrian Fung</li>
-				<li>Adrienne Eumi Ko</li> 
-				<li>Adrienne Pena</li>
-				<li>Alan Leung</li>
-				<li>Albert Liang</li>
-				<li>Alexander Sun</li>
-				<li>Alexandra Benitez</li>
-				<li>Alexandra Huang</li>
-				<li>Alice Lan</li>
-				<li>Allen Chang</li>
-				<li>Althea Han</li>
-				<li>Alton Spornick</li>
-				<li>Anderson Lenguyen</li>
-				<li>Andy Mai</li>
-				<li>Anna Chen</li>
-				<li>Annie Tang</li>
-				<li>Ambrose Vuong</li>
-				<li>Amelia Chu</li>
-				<li>Andres Campos</li>
-				<li>Andrew Nguyen</li>
-				<li>Andy Leung</li>
-				<li>Angela Tam</li>
-				<li>Anh La</li>
-				<li>Ariel Tam</li>
-				<li>Aryana Sepassi</li>
-				<li>Ashli Leong</li>
-				<li>Audrey Chang</li>
-				<li>Audrey Do</li>
-				<li>Bella Chen</li>
-				<li>Beneen Fune</li>
-				<li>Best Tech</li>
-				<li>Billy Phannavong</li>
-				<li>Bonita Kam</li>
-				<li>Brian Vu</li>
-				<li>Caitlin Lim</li>
-				<li>Calvin Chen</li>
-				<li>Calvin Yang</li>
-				<li>Carol Huang</li>
-				<li>Caroline Steele</li>
-				<li>Charlie Liu</li>
-				<li>Chase Cho</li>
-				<li>Chelsea Wong</li>
-				<li>Christine Tran</li>
-				<li>Christopher Yu</li>
-				<li>Christy Torres</li>
-				<li>Conely Chan</li>
-				<li>Connie Chong</li>
-				<li>Crystal Yan</li>
-				<li>Daisy Mah</li>
-				<li>Dan Han</li>
-				<li>Daniel Ng</li>
-				<li>Daniel Walder</li>
-				<li>Daniel Xu</li>
-				<li>Daniel Yang</li>
-				<li>Daven Ng</li>
-				<li>David Deng</li>
-				<li>David Galash</li>
-				<li>David Lu</li>
-				<li>David Nguyen</li>
-				<li>David Song</li>
-				<li>David Wu</li>
-				<li>Desmond Trieu</li>
-				<li>Dieter Lam</li>
-				<li>Dongjia (Val) Chen</li>
-				<li>Dustin Ingagiola</li>
-				<li>Dylan Rhee</li>
-				<li>Eileen Zhang</li>
-				<li>Elaine Keung</li>
-				<li>Elian Lee</li>
-				<li>Elmer Barrera</li>
-				<li>Emily Fu</li>
-				<li>Emily Man</li>
-				<li>Emily Vo</li>
-				<li>Emre Durmus</li>
-				<li>Erin Pang</li>
-				<li>Flint Liu</li>
-				<li>Frank Pan</li>
-				<li>Gavin Ishihara-Wing</li>
-				<li>George Huang</li>
-				<li>George Huang</li>
-				<li>Glennon Ng</li>
-				<li>Hanfrey Deng</li>
-				<li>Helen Zhu</li>
-				<li>Howard Yang</li>
-				<li>Hsi (Kristen) Young</li>
-				<li>Jacob Zhong</li>
-				<li>Jacqueline Chen</li>
-				<li>James Lin</li>
-				<li>James Zhang</li>
-				<li>James Zhao</li>
-				<li>Javier Herrera</li>
-				<li>Jay Yu</li>
-				<li>Jeff Wong</li>
-				<li>Jennifer Ma</li>
-				<li>Jerilyn Dickens</li>
-				<li>Jerry Lin</li>
-				<li>Jessica Gong</li>
-				<li>Jessica Soong</li>
-				<li>Jessica Tse</li>
-				<li>Jian Lee</li>
-				<li>Joanna Wang</li>
-				<li>Joaquin	Ramento</li>
-				<li>John (Reili) Dizon</li>
-				<li>Jon Lin</li>
-				<li>Jonathan Wong</li>
-				<li>Josh Biol</li>
-				<li>Julia Sun</li>
-				<li>Julian Trinidad</li>
-				<li>Justin Yeung</li>
-				<li>Karen Lo</li>
-				<li>Karina Choi</li>
-				<li>Katherine Ngo</li>
-				<li>Kazuki Nakashima</li>
-				<li>Kelley Tran</li>
-				<li>Kelly Lin</li>
-				<li>Kenneth Hom</li>
-				<li>Kenneth Kwong</li>
-				<li>Kenneth Truong</li>
-				<li>Kerry Chiu</li>
-				<li>Kevin Dang</li>
-				<li>Kevin Jang</li>
-				<li>Kevin Tan</li>
-				<li>Kimberly Hui</li>
-				<li>Lance Wang</li>
-				<li>Lauren Choy</li>
-				<li>Linda Lim</li>
-				<li>Lori Jue</li>
-				<li>Lori Ross</li>
-				<li>Lorna Yee</li>
-				<li>Louis Vo</li>
-				<li>Lucas Blumhardt</li>
-				<li>Lydia Fong</li>
-				<li>Marie Nguyen</li>
-				<li>Matt Peterson</li>
-				<li>Matt Sim</li>
-				<li>Melody Huang</li>
-				<li>Mia Jerphagnon</li>
-				<li>Michael Chiang</li>
-				<li>Michael Lee</li>
-				<li>Michael Liu</li>
-				<li>Michael Liu</li>
-				<li>Michelle Chung</li>
-				<li>Michelle Yu</li>
-				<li>Nathan Au-Yeung</li>
-				<li>Nathan Chu</li>
-				<li>Nathan Leung</li>
-				<li>Nicholas Vo</li>
-				<li>Nicole Chan</li>
-				<li>Nicole Choy</li>
-				<li>Nina Chou</li>
-				<li>Norman Liu</li>
-				<li>Norman Tsai</li>
-				<li>Parisa Ghopeh</li>
-				<li>Peter Nguyen</li>
-				<li>Ramzi Majit</li>
-				<li>Ray Tsao</li>
-				<li>Ray Zhao</li>
-				<li>Raymond Quan</li>
-				<li>Raymond Young</li>
-				<li>Regina Wong</li>
-				<li>Richard Sim</li>
-				<li>Richard Ting</li>
-				<li>Ron Marquez</li>
-				<li>Rosanne Luu</li>
-				<li>Ryan Chiang</li>
-				<li>Samson Yang</li>
-				<li>Sandy Ngan</li>
-				<li>Sang Bae</li>
-				<li>Scott Kwang</li>
-				<li>Seward Yuan</li>
-				<li>Sharleen Chan</li>
-				<li>Shengqiu (Goldie) Jin</li>
-				<li>Skylar Tan</li>
-				<li>Solomon Li</li>
-				<li>Stacy Nguyen</li>
-				<li>Stephanie Tsai</li>
-				<li>Sum Liu</li>
-				<li>Tara Sooreechine</li>
-				<li>Teresa Chen</li>
-				<li>Teresa Pan</li>
-				<li>Teresa Trinh</li>
-				<li>Theodore Ochiai</li>
-				<li>Thomas Chang</li>
-				<li>Tiffany Ng</li>
-				<li>Tino Zhang</li>
-				<li>Tisha Lim</li>
-				<li>Tori Duong</li>
-				<li>Vicky Chen</li>
-				<li>Victor Huang</li>
-				<li>Vincent Yang</li>
-				<li>Wesley Zhen</li>
-				<li>Wilson Li</li>
-				<li>Xiankun Zhang</li>
+				{% for alumni in site.data.all_alumni %}
+				<li>{{ alumni.name }}</li>
+				{% endfor %}
 			</ul>
 		</div>
 	</div>
