added space on the sponsers page

--- a/sponsors.html
+++ b/sponsors.html
@@ -9,7 +9,7 @@ layout: default
 		</div>
 		
 		<div class="horz_block flex_center">
-			<p class="section_text flex_center description_text">If you are interesting in sponsoring our team, please email us at <a href="mailto:ucsddragonboat@gmail.com"> ucsddragonboat@gmail.com</a>!</p>
+			<p class="section_text description_text">If you are interesting in sponsoring our team, please email us at <a href="mailto:ucsddragonboat@gmail.com"> ucsddragonboat@gmail.com</a>!</p>
 		</div>
 
 
