Adjusted comment over old <ul>

--- a/alumni.html
+++ b/alumni.html
@@ -17,8 +17,8 @@ layout: default
 			 <ul class="alumni-list">
 				{% for alumni in site.data.alumni %}
 				<li>{{ alumni.name }} | {{ alumni.year-joined }}</li>
-				{% endfor %} -->
-			</ul>
+				{% endfor %}
+			</ul> -->
 			<br/>
 
 
