Published college cup results

--- a/results.html
+++ b/results.html
@@ -11,6 +11,53 @@ layout: default
 		
 		<div class="horz_block results_block">
 			<p class="section_subHeader">
+				2022-2023 Season
+			</p>
+			<div class="season_part">
+				<div class="season_pic">
+					<img src="img/CollegeCup2022.jpg">
+				</div>
+				<div class="results_part">
+                    <div class="race_card">
+                        <p class="race_name">
+                            <a href="https://drive.google.com/file/d/1WLKVNrpr2lTyHNpzHOQk-lAgNnpu8gcC/view" target="_blank">
+								15th Annual CDBA College Cup Championship
+                            </a>
+                        </p>
+                        <table class="results_table">
+                            <tr class="info_row">
+                                <th>Lake Merced - San Francisco, CA</td>
+                                <th></th>
+                                <th>11/12/22</th>
+							</tr>
+							<tr>
+                                <td>Mixed Division A 500m</td>
+                                <td>2nd</td>
+                                <td>2:15:63</td>
+							</tr>
+							<tr>
+                                <td>Mixed Division C 500m</td>
+                                <td>1st</td>
+                                <td>2:30:52</td>
+							</tr>
+							<tr>
+                                <td>Open Division 500m</td>
+                                <td>4th</td>
+                                <td>2:14:37</td>
+							</tr>
+							<tr>
+                                <td>Women Division 500m</td>
+                                <td>4th</td>
+                                <td>2:43:48</td>
+							</tr>
+                        </table>
+                    </div>
+				</div><!--end of results_part grid-->
+			</div><!-- end of season_part grid-->
+		</div><!--end of block season 2022-2023-->
+
+		<div class="horz_block results_block">
+			<p class="section_subHeader">
 				2021-2022 Season
 			</p>
 			<div class="season_part">
@@ -66,12 +113,12 @@ layout: default
 							</tr>
 							<tr>
 								<td>Mixed Division A Semi-final 500m</td>
-								<td>3nd</td>
+								<td>3rd</td>
 								<td>2:17.361</td>
 							</tr>
 							<tr>
 								<td>Mixed Division B Semi-final 500m</td>
-								<td>3nd</td>
+								<td>3rd</td>
 								<td>2:29.341</td>
 							</tr>
 							<tr>
@@ -92,7 +139,7 @@ layout: default
 			</p>
 			<div class="season_part">
 				<div class="season_pic">
-					<img src="img/.jpg">
+					<img src="img/CollegeCup2019.jpg">
 				</div>
 				<div class="results_part">
                     <div class="race_card">
