--- a/recruitment.html
+++ b/recruitment.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Recruitment
 ---
 
 <script type="text/javascript" src="{{site.baseurl}}/assets/js/recruitment.js"></script>
