--- a/recruitment.html
+++ b/recruitment.html
@@ -9,19 +9,19 @@ title: Recruitment 2023
 		<h1 class="about_header" id="recruitment_about_header" style="text-align: center">Recruitment 2023</h1>
 	</div>
 
-	<!--
+	
 	<div class="message_recruitment_over_cover">
 		<div class="message_recruitment_over_content">
 			<span class="close">&times;</span>
 			<div class="horz_block flex_center" style="margin-top: 1em;">
 				<h1>IMPORTANT ANNOUNCEMENT</h1>
-				<p>We are sorry to announce that recruitment for the 2022-2023 season is over.
-					Please check back at the start of September 2023 for more information on recruitment
-					for the 2023-2024 season.</p>
+				<p>We are sorry to announce that recruitment for the 2023-2024 season is over.
+					Please check back at the start of September 2024 for more information on recruitment
+					for the 2024-2025 season.</p>
 			</div>
 		</div>
 	</div>
-	-->
+	
 
 	<div class="horz_block flex_center" style="margin-bottom: 0;">
 		<p class="section_subHeader">Join UC San Diego Dragon Boat!</p>
@@ -57,7 +57,7 @@ title: Recruitment 2023
 				<span id="right_arrow" class="recruitment_arrow down_arrow_right"></span>
 			</h3>
 		</a>
-		<div id="recruitment_dropdown_text" class="invisible">
+		<div id="recruitment_dropdown_text">
 
 			<div class="white_block horz_block flex_center" style='width: 90%; background-image: url("img/recruitmentback2.png")'>
 				<div>
