--- a/donate.html
+++ b/donate.html
@@ -2,40 +2,35 @@
 layout: default
 title: Donate
 ---
+
 <body>
-  	
-    	<div class="content_wrap">
-  	  	<div class="horz_block" id="block_about_head">
-  	      <h1 class="about_header">Donations</h1>
-  	    </div>  
+
+    <div class="content_wrap">
+        <div class="horz_block" id="block_about_head">
+            <h1 class="about_header">Donations</h1>
+        </div>
 
         <div class="horz_block flex_center">
-          <p class="section_subHeader">Tax Deductible Donations</p>
-            <p class="section_text donateNow_text"> Support UC San Diego Dragon Boat through financial donations! We are throughly grateful for your support.
+            <p class="section_subHeader">Tax Deductible Donations</p>
+            <p class="section_text donateNow_text"> Support UC San Diego Dragon Boat through financial donations! We are
+                throughly grateful for your support.
             <div class="donate_btn">
-              <a class="donate_link" href="https://giveto.ucsd.edu/make-a-gift?sk=3&txtFundNo=4962" target="_blank">DONATE</a>   
+                <a class="donate_link" href="https://giveto.ucsd.edu/make-a-gift?sk=3&txtFundNo=4962"
+                    target="_blank">DONATE</a>
             </div>
-          <p class="donate_description">Please fill out the form below after your donation has been made.</p>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe8OX07azeTfw79gT-DLaEjbEU_ADcs93DWx3Wr-Z1OGIDVag/viewform?embedded=true" width="640" height="683" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <p class="donate_description">Please fill out the form below after your donation has been made.</p>
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSe8OX07azeTfw79gT-DLaEjbEU_ADcs93DWx3Wr-Z1OGIDVag/viewform?embedded=true"
+                width="640" height="683" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
 
         <div class="horz_block flex_center" style="margin-top: 0px">
             <p class="section_subHeader">Special Thanks To</p>
             <p class="section_text">
-              <p class="donate_thanks">Scott Kwang</p><p class="donate_thanks">Henry Kao</p><p class="donate_thanks">Sasanna Yee</p>
+            <p class="donate_thanks">Scott Kwang</p>
+            <p class="donate_thanks">Henry Kao</p>
+            <p class="donate_thanks">Sasanna Yee</p>
             </p>
         </div>
-
-    	</div>
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-67830507-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-  </body>
-</html>
+    </div>
+</body>
