--- a/results.html
+++ b/results.html
@@ -8,7 +8,23 @@ title: Race Results
 
 		<div class="horz_block " id="block_about_head">
 			<h1 class="about_header">Race Results</h1>
-		</div>		
+		</div>
+
+		<div class="horz_block results_block">
+			<p class="section_subHeader">
+				2023-2024 Season
+			</p>
+			<div class="season_part">
+				<div class="season_pic">
+					<img src="img/CollegeCup2023.jpg">
+				</div>
+				<div class="results_part">
+					<!-- <div class="race_card">
+						{% include race-table.liquid race-info=site.data.raceresults.babylb23 %}
+					</div> -->
+				</div><!--end of results_part grid-->
+			</div><!-- end of season_part grid-->
+		</div><!--end of block season 2023-2024-->
 		
 		<div class="horz_block results_block">
 			<p class="section_subHeader">
@@ -54,7 +70,7 @@ title: Race Results
                         </table>
                     </div>
 					<div class="race_card">
-						{% include race-table.html race-info=site.data.raceresults.babylb23 %}
+						{% include race-table.liquid race-info=site.data.raceresults.babylb23 %}
 					</div>
 				</div><!--end of results_part grid-->
 			</div><!-- end of season_part grid-->
@@ -1306,16 +1322,6 @@ title: Race Results
 			</div><!-- end of season_part grid-->
 		</div><!--end of block season 2012-2013--> 
 	</div>
-	<script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-67830507-1', 'auto');
-        ga('send', 'pageview');
-
-	</script>
 	<script>
 		$(".season_part").toggleClass("flex_center");
 	</script>
