commented out the important annoucement

--- a/recruitment.html
+++ b/recruitment.html
@@ -10,7 +10,7 @@ title: Recruitment 2023
 	</div>
 
 	
-	<div class="message_recruitment_over_cover">
+	<!-- <div class="message_recruitment_over_cover">
 		<div class="message_recruitment_over_content">
 			<span class="close">&times;</span>
 			<div class="horz_block flex_center" style="margin-top: 1em;">
@@ -20,7 +20,7 @@ title: Recruitment 2023
 					for the 2024-2025 season.</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	
 
 	<div class="horz_block flex_center" style="margin-bottom: 0;">
