--- a/recruitment.html
+++ b/recruitment.html
@@ -105,7 +105,7 @@ title: Recruitment 2023
 								<td>Wednesday, 10/2</td>
 								<td>Fundraiser</td>
 								<td>4:00pm-8:00pm</td>
-								<td>Tapioca Express (<strong>Optional</strong>* but highly recommended to support and social!)</td>
+								<td>Tapioca Express (<strong>Optional</strong>* but highly recommended to support and socialize!)</td>
 							</tr>
 							<tr>
 								<td>Thursday, 10/3</td>
