update on ending recruitment season '24-'25

--- a/recruitment.html
+++ b/recruitment.html
@@ -10,17 +10,17 @@ title: Recruitment 2023
 	</div>
 
 	
-	<!-- <div class="message_recruitment_over_cover">
+	<div class="message_recruitment_over_cover">
 		<div class="message_recruitment_over_content">
 			<span class="close">&times;</span>
 			<div class="horz_block flex_center" style="margin-top: 1em;">
 				<h1>IMPORTANT ANNOUNCEMENT</h1>
-				<p>We are sorry to announce that recruitment for the 2023-2024 season is over.
-					Please check back at the start of September 2024 for more information on recruitment
-					for the 2024-2025 season.</p>
+				<p>We are sorry to announce that recruitment for the 2024-2025 season is over.
+					Please check back at the start of September 2025 for more information on recruitment
+					for the 2025-2026 season.</p>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	
 
 	<div class="horz_block flex_center" style="margin-bottom: 0;">
